WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
127387
AX: Crash in WebKit::WebPageProxy::registerWebProcessAccessibilityToken
https://bugs.webkit.org/show_bug.cgi?id=127387
Summary
AX: Crash in WebKit::WebPageProxy::registerWebProcessAccessibilityToken
chris fleizach
Reported
2014-01-21 17:55:10 PST
37 com.apple.WebKit2: WebKit::WebPageProxy::registerWebProcessAccessibilityToken + 11 <== 37 com.apple.WebKit2: WebKit::WebPageProxy::didReceiveMessage + 7257 37 com.apple.WebKit2: CoreIPC::MessageReceiverMap::dispatchMessage + 125 37 com.apple.WebKit2: WebKit::ChildProcessProxy::dispatchMessage + 13 37 com.apple.WebKit2: WebKit::WebProcessProxy::didReceiveMessage + 24 37 com.apple.WebKit2: CoreIPC::Connection::dispatchMessage + 101 37 com.apple.WebKit2: CoreIPC::Connection::dispatchOneMessage + 106 28 com.apple.WebCore: WebCore::RunLoop::performWork + 270 | 28 com.apple.WebCore: WebCore::RunLoop::performWork + 34 | 28 com.apple.CoreFoundation: __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 17 | 28 com.apple.CoreFoundation: __CFRunLoopDoSources0 + 242 | 28 com.apple.CoreFoundation: __CFRunLoopRun + 831 | 28 com.apple.CoreFoundation: CFRunLoopRunSpecific + 309 | 28 com.apple.HIToolbox: RunCurrentEventLoopInMode + 226 | 28 com.apple.HIToolbox: ReceiveNextEventCommon + 479 | 28 com.apple.HIToolbox: _BlockUntilNextEventMatchingListInModeWithFilter + 65 | 28 com.apple.AppKit: _DPSNextEvent + 1434 | 28 com.apple.AppKit: -[NSApplication nextEventMatchingMask:untilDate:inMode:dequeue:] + 122 | 28 com.apple.AppKit: -[NSApplication run] + 553 | 28 com.apple.quicklook.ui.helper: main | 28 libdyld.dylib: start + 1 9 com.apple.WebCore: WebCore::RunLoop::performWork + 557 9 com.apple.WebCore: WebCore::RunLoop::performWork + 34 9 com.apple.CoreFoundation: __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ + 17 9 com.apple.CoreFoundation: __CFRunLoopDoSources0 + 242 9 com.apple.CoreFoundation: __CFRunLoopRun + 831 9 com.apple.CoreFoundation: CFRunLoopRunSpecific + 309 9 com.apple.HIToolbox: RunCurrentEventLoopInMode + 226 9 com.apple.HIToolbox: ReceiveNextEventCommon + 479 9 com.apple.HIToolbox: _BlockUntilNextEventMatchingListInModeWithFilter + 65 9 com.apple.AppKit: _DPSNextEvent + 1434 9 com.apple.AppKit: -[NSApplication nextEventMatchingMask:untilDate:inMode:dequeue:] + 122 9 com.apple.AppKit: -[NSApplication run] + 553 9 com.apple.quicklook.ui.helper: main 9 libdyld.dylib: start + 1 <
rdar://problem/15723355
> <
rdar://probl
;e
Attachments
patch
(1.27 KB, patch)
2014-01-21 17:56 PST
,
chris fleizach
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2014-01-21 17:56:54 PST
Created
attachment 221815
[details]
patch
Alexey Proskuryakov
Comment 2
2014-01-22 09:59:27 PST
Comment on
attachment 221815
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=221815&action=review
> Source/WebKit2/UIProcess/mac/WebPageProxyMac.mm:390 > + if (!isValid()) > + return;
Is it semantically correct to ignore this call, or should the data be queued and sent once the process is (re)started?
chris fleizach
Comment 3
2014-01-22 11:50:41 PST
(In reply to
comment #2
)
> (From update of
attachment 221815
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=221815&action=review
> > > Source/WebKit2/UIProcess/mac/WebPageProxyMac.mm:390 > > + if (!isValid()) > > + return; > > Is it semantically correct to ignore this call, or should the data be queued and sent once the process is (re)started?
Good question. I should play with this some more
WebKit Commit Bot
Comment 4
2014-02-28 14:58:31 PST
Comment on
attachment 221815
[details]
patch Clearing flags on attachment: 221815 Committed
r164887
: <
http://trac.webkit.org/changeset/164887
>
WebKit Commit Bot
Comment 5
2014-02-28 14:58:33 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug