AX: Crash in WebKit::WebPageProxy::registerWebProcessAccessibilityToken https://bugs.webkit.org/show_bug.cgi?id=127387

Reviewed by Alexey Proskuryakov.

Speculative fix for crasher. We should check if the connection is still valid before proceeding.

* UIProcess/mac/WebPageProxyMac.mm:
(WebKit::WebPageProxy::registerWebProcessAccessibilityToken):


Canonical link: https://commits.webkit.org/147571@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164887 268f45cc-cd09-0410-ab3c-d52691b4dbfc